--- a/themes/gopher/layouts/partials/footer.html
+++ b/themes/gopher/layouts/partials/footer.html
@@ -1,5 +1,4 @@
   <footer id="footer" style="justify-content: center">
     <p>
-      <a href="https://github.com/ashleymcnamara/gophers">Gopher artwork by Ashley McNamara</a> licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 License</a>.
-    </p>
+      <a href="/gopher">Learn About the Gopher Artwork</a></p>
   </footer>
