--- a/themes/gopher/layouts/_default/list.html
+++ b/themes/gopher/layouts/_default/list.html
@@ -3,9 +3,9 @@
 
 {{ define "main" }}
 
-<div id="demo-container" class="is-container">
-  {{ partial "aboutmenu" . }}
-  <div id="demo-content">
+<div id="container" class="is-container">
+  {{ partial "left-nav" . }}
+  <div id="content">
   <div id="hero" class="wrap">
   <h1>{{ .Title }}</h1>
   {{if .Description }}
