--- a/themes/gopher/layouts/partials/left-nav.html
+++ b/themes/gopher/layouts/partials/left-nav.html
@@ -1,15 +1,14 @@
-<div id="demo-sidebar">
+<div id="left">
 {{ $currentSection := .Section }}
 {{ $currentPage := . }}
 {{ range $name, $menu := .Site.Menus }}
 	{{ if ne $name "main" }}
 			{{ if eq $currentSection $name }}
-			{{ title $currentSection }}
-			<nav id="somenav-{{ $name }}">
+			<nav id="left-nav">
 				<ul>
 				{{ range $menu }}
 						<li>
-							* <a href="{{ .URL }}" {{if  $currentPage.IsMenuCurrent $name . }} class="active"{{end}}>{{ .Name }}</a>
+							<a href="{{ .URL }}" {{if  $currentPage.IsMenuCurrent $name . }} class="active"{{end}}>{{ .Name }}</a>
 						</li>
 				{{end}}
 			</ul>
